@@ -12,114 +12,114 @@
  *
  * SPDX-License-Identifier: Apache-2.0
  */
-package org.hyperledger.besu.tests.web3j.privacy;
+package org.hyperledger.besu.tests.acceptance.privacy;
 
 import static org.assertj.core.api.Assertions.assertThat;
+import static org.web3j.utils.Restriction.UNRESTRICTED;
 
 import org.hyperledger.besu.tests.acceptance.dsl.privacy.ParameterizedEnclaveTestBase;
 import org.hyperledger.besu.tests.acceptance.dsl.privacy.PrivacyNode;
+import org.hyperledger.besu.tests.acceptance.dsl.privacy.account.PrivacyAccountResolver;
 import org.hyperledger.besu.tests.acceptance.dsl.privacy.util.LogFilterJsonParameter;
 import org.hyperledger.besu.tests.web3j.generated.EventEmitter;
 import org.hyperledger.enclave.testutil.EnclaveType;
 
+import java.io.IOException;
 import java.math.BigInteger;
+import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 
-import org.junit.Before;
 import org.junit.Test;
 import org.web3j.protocol.besu.response.privacy.PrivateTransactionReceipt;
 import org.web3j.protocol.core.methods.response.EthLog.LogResult;
+import org.web3j.utils.Restriction;
 
 @SuppressWarnings("rawtypes")
-public class PrivGetLogsAcceptanceTest extends ParameterizedEnclaveTestBase {
-  public PrivGetLogsAcceptanceTest(final EnclaveType enclaveType) {
-    super(enclaveType);
-  }
+public class PrivateLogFilterAcceptanceTest extends ParameterizedEnclaveTestBase {
 
-  /*
-   This value is derived from the contract event signature
-  */
-  private static final String EVENT_EMITTER_EVENT_TOPIC =
-      "0xc9db20adedc6cf2b5d25252b101ab03e124902a73fcb12b753f3d1aaa2d8f9f5";
+  private final PrivacyNode node;
 
-  private PrivacyNode node;
+  public PrivateLogFilterAcceptanceTest(
+      final Restriction restriction, final EnclaveType enclaveType) throws IOException {
 
-  @Before
-  public void setUp() throws Exception {
+    super(restriction, enclaveType);
+
     node =
         privacyBesu.createPrivateTransactionEnabledMinerNode(
-            "miner-node", privacyAccountResolver.resolve(0), enclaveType, Optional.empty());
+            restriction + "-node",
+            PrivacyAccountResolver.ALICE,
+            enclaveType,
+            Optional.empty(),
+            false,
+            false,
+            restriction == UNRESTRICTED);
+
     privacyCluster.start(node);
   }
 
   @Test
-  public void getLogsUsingBlockRangeFilter() {
+  public void installAndUninstallFilter() {
     final String privacyGroupId = createPrivacyGroup();
     final EventEmitter eventEmitterContract = deployEventEmitterContract(privacyGroupId);
-
-    /*
-     Updating the contract value 2 times
-    */
-    updateContractValue(privacyGroupId, eventEmitterContract, 1);
-    updateContractValue(privacyGroupId, eventEmitterContract, 2);
 
     final LogFilterJsonParameter filter =
         blockRangeLogFilter("earliest", "latest", eventEmitterContract.getContractAddress());
 
-    final List<LogResult> logs =
-        node.execute(privacyTransactions.privGetLogs(privacyGroupId, filter));
+    final String filterId = node.execute(privacyTransactions.newFilter(privacyGroupId, filter));
 
-    /*
-     We expect one log entry per tx changing the contract value
-    */
-    assertThat(logs).hasSize(2);
+    final boolean filterUninstalled =
+        node.execute(privacyTransactions.uninstallFilter(privacyGroupId, filterId));
+
+    assertThat(filterUninstalled).isTrue();
   }
 
   @Test
-  public void getLogsUsingBlockHashFilter() {
+  public void getFilterLogs() {
     final String privacyGroupId = createPrivacyGroup();
     final EventEmitter eventEmitterContract = deployEventEmitterContract(privacyGroupId);
 
-    /*
-     Updating the contract value 1 times
-    */
-    final PrivateTransactionReceipt updateValueReceipt =
-        updateContractValue(privacyGroupId, eventEmitterContract, 1);
-    final String blockHash = updateValueReceipt.getBlockHash();
-
     final LogFilterJsonParameter filter =
-        blockHashLogFilter(blockHash, eventEmitterContract.getContractAddress());
+        blockRangeLogFilter("earliest", "latest", eventEmitterContract.getContractAddress());
+    final String filterId = node.execute(privacyTransactions.newFilter(privacyGroupId, filter));
+
+    updateContractValue(privacyGroupId, eventEmitterContract, 1);
 
     final List<LogResult> logs =
-        node.execute(privacyTransactions.privGetLogs(privacyGroupId, filter));
+        node.execute(privacyTransactions.getFilterLogs(privacyGroupId, filterId));
 
     assertThat(logs).hasSize(1);
+  }
+
+  @Test
+  public void getFilterChanges() {
+    final String privacyGroupId = createPrivacyGroup();
+    final EventEmitter eventEmitterContract = deployEventEmitterContract(privacyGroupId);
+
+    final LogFilterJsonParameter filter =
+        blockRangeLogFilter("earliest", "latest", eventEmitterContract.getContractAddress());
+    final String filterId = node.execute(privacyTransactions.newFilter(privacyGroupId, filter));
+
+    updateContractValue(privacyGroupId, eventEmitterContract, 1);
+    updateContractValue(privacyGroupId, eventEmitterContract, 2);
+
+    assertThat(node.execute(privacyTransactions.getFilterChanges(privacyGroupId, filterId)))
+        .hasSize(2);
+
+    updateContractValue(privacyGroupId, eventEmitterContract, 3);
+
+    assertThat(node.execute(privacyTransactions.getFilterChanges(privacyGroupId, filterId)))
+        .hasSize(1);
   }
 
   private LogFilterJsonParameter blockRangeLogFilter(
       final String fromBlock, final String toBlock, final String contractAddress) {
     return new LogFilterJsonParameter(
-        fromBlock,
-        toBlock,
-        List.of(contractAddress),
-        List.of(List.of(EVENT_EMITTER_EVENT_TOPIC)),
-        null);
-  }
-
-  private LogFilterJsonParameter blockHashLogFilter(
-      final String blockHash, final String contractAddress) {
-    return new LogFilterJsonParameter(
-        null,
-        null,
-        List.of(contractAddress),
-        List.of(List.of(EVENT_EMITTER_EVENT_TOPIC)),
-        blockHash);
+        fromBlock, toBlock, List.of(contractAddress), Collections.emptyList(), null);
   }
 
   private String createPrivacyGroup() {
-    return node.execute(
-        privacyTransactions.createPrivacyGroup("myGroupName", "my group description", node));
+    return node.execute(createPrivacyGroup("myGroupName", "my group description", node));
   }
 
   private EventEmitter deployEventEmitterContract(final String privacyGroupId) {
@@ -128,7 +128,7 @@ public class PrivGetLogsAcceptanceTest extends ParameterizedEnclaveTestBase {
             privateContractTransactions.createSmartContractWithPrivacyGroupId(
                 EventEmitter.class,
                 node.getTransactionSigningKey(),
-                POW_CHAIN_ID,
+                restriction,
                 node.getEnclaveKey(),
                 privacyGroupId));
 
@@ -148,7 +148,7 @@ public class PrivGetLogsAcceptanceTest extends ParameterizedEnclaveTestBase {
                 eventEmitterContract.getContractAddress(),
                 eventEmitterContract.store(BigInteger.valueOf(value)).encodeFunctionCall(),
                 node.getTransactionSigningKey(),
-                POW_CHAIN_ID,
+                restriction,
                 node.getEnclaveKey(),
                 privacyGroupId));
 
